@@ -44,6 +44,7 @@ The full list of provided widgets:
   * Group - container for surrounding widgets into a distinguishable group.
   * MultiLabel - widget that allows to implement overlay of multiple labels on the same area.
   * ScrollArea - container that allows to package widget into limited rectangular space.
+  * TabControl - container that allows to organize widgets as a set of tabs.
   * Window - window widget.
 * Dialogs:
   * FileDialog - widget for selecting files for load/save operations.
